# hakoniwa-conductor

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-macos.yml  build-ubuntu.yml  build.yml
main/: Cargo.toml  Cargo.toml.raspberrypi  build.rs  clean.bash  hako-cleanup  hako-master  install-raspberrypi.bash  install.bash  run.bash
main/src/: main.rs  main_client.rs
main/src/client/: mod.rs
main/src/client/rpc_client/: mod.rs
main/src/client/sim_executor/: mod.rs
main/src/hako/: mod.rs
main/src/hako/api/: mod.rs
main/src/hako/method/: mod.rs
main/src/hako/method/mqtt/: mod.rs
main/src/hako/method/udp/: mod.rs
main/src/hako/pdu/: mod.rs
main/src/loader/: mod.rs
main/src/server/: mod.rs
test/: docker-compose.yml
test/docker/: Dockerfile  attach.bash  create-image.bash  env.bash  image_name.txt  run.bash
test/docker/client/: Dockerfile  attach.bash  create-image.bash  image_name.txt
test/docker/server/: Dockerfile  attach.bash  create-image.bash
test/workspace/client/: activate-client.bash  asset-client-tester.py  conductor_config.json  conductor_config_mqtt.json  custom.json  install.bash  run.bash
test/workspace/client/for_test/: hako.py
test/workspace/client/for_test/backup/: hako.py  hako_robomodel_any.py
test/workspace/server/: activate-conductor.bash  asset-srv-tester.py  run.bash
test/workspace/spec/: asset-pdudef.json  custom.json  custom_mqtt.json  hako.py
