[package]
name = "main"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chan = "*"
chan-signal = "*"
link-cplusplus = { version = "1.0", features = ["libc++"] }

[build-dependencies]
cc = "1"

[profile.dev]
opt-level = 0
debug = true