[package]
name = "main"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chan = "*"
chan-signal = "*"
libc = "*"
link-cplusplus = { version = "1.0", features = ["libc++"] }
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
lazy_static = "*"
once_cell = "*"

[build-dependencies]
cc = "1"
tonic-build = "0.8"

[profile.dev]
opt-level = 0
debug = true